--- a/package.json
+++ b/package.json
@@ -18,11 +18,25 @@
     "@docusaurus/core": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@docusaurus/theme-mermaid": "^3.7.0",
+    "@emailjs/browser": "^4.4.1",
     "@mdx-js/react": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@untitled-ui/icons-react": "^0.1.4",
+    "class-variance-authority": "^0.7.1",
     "docusaurus-lunr-search": "^3.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
